// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WithImage renders header background image 1`] = `
<header
  aria-level="1"
  className="gQgvQJ"
  role="heading"
>
  <span
    aria-hidden={true}
    className="gFBHoc yROTA"
    style={
      Object {
        "backgroundImage": "url(https://placekitten.com/g/2/2)",
      }
    }
  />
  <div
    className="hhJOJe"
  >
    <div
      className="gQIonf"
    >
      <div
        className="kesrzW"
      >
        <div
          className="fAOYTB"
        >
          <img
            alt="place holder"
            src="https://placekitten.com/g/400/242"
          />
        </div>
      </div>
    </div>
  </div>
</header>
`;

exports[`WithImage renders header background image correctly when a withOverlay prop equaling true is passed 1`] = `
<header
  aria-level="1"
  className="gQgvQJ"
  role="heading"
>
  <span
    aria-hidden={true}
    className="gradient--overlay gFBHoc yROTA"
    style={
      Object {
        "backgroundImage": "url(https://placekitten.com/g/2/2)",
      }
    }
  />
  <div
    className="hhJOJe"
  >
    <div
      className="gQIonf"
    >
      <div
        className="kesrzW"
      >
        <div
          className="fAOYTB"
        >
          <img
            alt="place holder"
            src="https://placekitten.com/g/400/242"
          />
        </div>
      </div>
    </div>
  </div>
</header>
`;

exports[`WithImage renders header background image correctly when a withUnderlay prop equaling true is passed 1`] = `
<header
  aria-level="1"
  className="gQgvQJ"
  role="heading"
>
  <span
    aria-hidden={true}
    className="gradient--underlay gFBHoc yROTA"
    style={
      Object {
        "backgroundImage": "url(https://placekitten.com/g/2/2)",
      }
    }
  />
  <div
    className="hhJOJe"
  >
    <div
      className="gQIonf"
    >
      <div
        className="kesrzW"
      >
        <div
          className="fAOYTB"
        >
          <img
            alt="place holder"
            src="https://placekitten.com/g/400/242"
          />
        </div>
      </div>
    </div>
  </div>
</header>
`;

exports[`WithImage renders header with image 1`] = `
<header
  aria-level="1"
  className="gQgvQJ"
  role="heading"
>
  <span
    className="iGVDnG yROTA"
  />
  <div
    className="hhJOJe"
  >
    <div
      className="gQIonf"
    >
      <div
        className="kesrzW"
      >
        <div
          className="fAOYTB"
        >
          <img
            alt="place holder"
            src="https://placekitten.com/g/400/242"
          />
        </div>
      </div>
    </div>
  </div>
</header>
`;
